# SocketServer

./: README.md  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
server_app/: build.gradle
server_app/src/androidTest/java/com/foobar/socketserver/: ExampleInstrumentedTest.kt
server_app/src/main/: AndroidManifest.xml
server_app/src/main/cpp/: CMakeLists.txt  CSocket.c  CSocket.cpp  CSocket.h  foobar.cpp
server_app/src/main/java/com/foobar/socketserver/: KServer.kt  MainActivity.kt
server_app/src/main/res/values/: integers.xml  strings.xml  themes.xml
server_app/src/main/res/values-night/: themes.xml
server_app/src/test/java/com/foobar/socketserver/: ExampleUnitTest.kt
